force-app/src/objects/ffr__XXXSummarization__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Summarizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__ActualValue__c</fullName>
        <label>Actual Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand01Count__c</fullName>
        <label>Aged Band 01 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand01__c</fullName>
        <label>Aged Band 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand02Count__c</fullName>
        <label>Aged Band 02 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand02__c</fullName>
        <label>Aged Band 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand03Count__c</fullName>
        <label>Aged Band 03 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AgedBand03__c</fullName>
        <label>Aged Band 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__BudgetValue__c</fullName>
        <label>Budget Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__CreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>ffr__XXXCreditNote__c</referenceTo>
        <relationshipLabel>XXX Summarizations</relationshipLabel>
        <relationshipName>Summarizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Dated__c</fullName>
        <label>Dated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__EMail__c</fullName>
        <label>EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffr__ForecastValue__c</fullName>
        <label>Forecast Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__GeoLocationDecimal__c</fullName>
        <label>GeoLocation Decimal</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ffr__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ffr__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ffr__XXXInvoice__c</referenceTo>
        <relationshipLabel>XXX Summarizations</relationshipLabel>
        <relationshipName>Summarizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Percent__c</fullName>
        <label>Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ffr__Period__c</fullName>
        <label>Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ffr__PicklistMulti__c</fullName>
        <label>Picklist Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American</fullName>
                    <default>true</default>
                    <label>American</label>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__RowCount__c</fullName>
        <label>Row Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__RunInstance__c</fullName>
        <label>Run Instance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__SFCurrency__c</fullName>
        <description>Salesforce Currency</description>
        <inlineHelpText>Salesforce Currency</inlineHelpText>
        <label>SFCurrency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplateID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template ID</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>XXX Summarizations</relationshipLabel>
        <relationshipName>XXXSummarizations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SummarizationTemplateName__c</fullName>
        <label>Summarization Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TextRich__c</fullName>
        <label>TextRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffr__Timing__c</fullName>
        <description>Timing is everything</description>
        <label>Timing Is Everything</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionCurrency__c</fullName>
        <label>Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDescription__c</fullName>
        <label>Transaction Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionDueDate__c</fullName>
        <label>Transaction Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__TransactionTotal__c</fullName>
        <label>Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>XXX Summarization</label>
    <nameField>
        <displayFormat>XSUM{000000}</displayFormat>
        <label>Summarization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Summarizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>